--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v3.1.0
       with:
-        username: ${{ secrets.DOCKERHUB_TOKEN }}
-        password: ${{ secrets.DOCKERHUB_PASSWD }}
+        username: ${{ secrets.DOCKERHUB_USER }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push
       uses: docker/build-push-action@v6
