--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,10 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+.[0-9]+
+      - v[0-9]+.[0-9]+.[0-9]+
+      - v[0-9]+.[0-9]+
   pull_request:
     branches: [ "main" ]
 
@@ -31,10 +35,12 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: ${{ env.IMAGE_NAME }}:${{ steps.branch-names.outputs.current_branch }}
+    - run: echo ${{ steps.branch-names.outputs.current_branch }}
+
+    #- name: Build and push
+    #  uses: docker/build-push-action@v6
+    #  with:
+    #    platforms: linux/amd64,linux/arm64
+    #    push: true
+    #    tags: ${{ env.IMAGE_NAME }}:${{ steps.branch-names.outputs.current_branch }}
 
